--- a/tutorials/ComplexArithmetic/ComplexArithmetic.ipynb
+++ b/tutorials/ComplexArithmetic/ComplexArithmetic.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,17 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def imaginary_power(n : int) -> int:\n",
     "    # If n is divisible by 4\n",
     "    if n % 4 == 0:\n",
-    "        return ...\n",
+    "        return 1\n",
     "    else:\n",
-    "        return ..."
+    "        return -1\n",
+    "    "
    ]
   },
   {
@@ -155,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_add(x : Complex, y : Complex) -> Complex:\n",
@@ -171,7 +188,7 @@
     "    # This creates a new variable and stores the real component into it\n",
     "    real = a + c\n",
     "    # Replace the ... with code to calculate the imaginary component\n",
-    "    imaginary = ...\n",
+    "    imaginary = b + d\n",
     "    \n",
     "    # You can create a tuple like this\n",
     "    ans = (real, imaginary)\n",
@@ -214,14 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_mult(x : Complex, y : Complex) -> Complex:\n",
-    "    # Fill in your own code\n",
-    "    return ..."
+    "    # Fill in your own code    \n",
+    "    g = (x[0] * y[0]) - (x[1] * y[1])\n",
+    "    h = (x[0] * y[1]) + (x[1] * y[0])\n",
+    "    return (g, h)"
    ]
   },
   {
@@ -274,13 +301,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def conjugate(x : Complex) -> Complex:\n",
-    "    return ..."
+    "    return (x[0], -x[1])"
    ]
   },
   {
@@ -333,13 +368,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_div(x : Complex, y : Complex) -> Complex:\n",
-    "    return ..."
+    "    num = (x[0], x[1])\n",
+    "    den = (y[0], y[1])\n",
+    "    \n",
+    "    num = complex_mult(num, conjugate(den))\n",
+    "    den = complex_mult(den, conjugate(den))\n",
+    "    \n",
+    "    real = num[0] / den[0]\n",
+    "    imaginary = num[1] / den[0]\n",
+    "    \n",
+    "    return (real, imaginary)"
    ]
   },
   {
@@ -412,13 +464,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
+    "import math\n",
+    "\n",
     "@exercise\n",
     "def modulus(x : Complex) -> float:\n",
-    "    return ..."
+    "    a = x[0]\n",
+    "    b = x[1]\n",
+    "    \n",
+    "    return math.sqrt(a ** 2 + b ** 2)"
    ]
   },
   {
@@ -480,13 +545,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_exp(x : Complex) -> Complex:\n",
-    "    return ..."
+    "    a = x[0]\n",
+    "    b = x[1]\n",
+    "    \n",
+    "    part1 = math.e ** a\n",
+    "    part2 = (math.cos(b), math.sin(b))\n",
+    "    \n",
+    "    real = part1 * part2[0]\n",
+    "    imaginary = part1 * part2[1]\n",
+    "    \n",
+    "    return (real, imaginary)"
    ]
   },
   {
@@ -520,13 +602,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_exp_real(r : float, x : Complex) -> Complex:\n",
-    "    return ..."
+    "    a = x[0]\n",
+    "    b = x[1]\n",
+    "    \n",
+    "    if r == 0:\n",
+    "        return (0, 0)\n",
+    "    else:\n",
+    "        exp_real = math.log(r) * a\n",
+    "        exp_imaginary = math.log(r) * b\n",
+    "\n",
+    "        solution = complex_exp((exp_real, exp_imaginary))\n",
+    "\n",
+    "        return solution"
    ]
   },
   {
@@ -578,14 +679,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def polar_convert(x : Complex) -> Polar:\n",
-    "    r = ...\n",
-    "    theta = ...\n",
+    "    r = modulus(x)    \n",
+    "    \n",
+    "    theta = math.atan2(x[1], x[0])\n",
     "    \n",
     "    return (r, theta)"
    ]
@@ -610,13 +720,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def cartesian_convert(x : Polar) -> Complex:\n",
-    "    return ..."
+    "    r = x[0]\n",
+    "    theta = x[1]\n",
+    "    \n",
+    "    real = r * math.cos(theta)\n",
+    "    imaginary = r * math.sin(theta)\n",
+    "    \n",
+    "    return (real, imaginary)"
    ]
   },
   {
@@ -655,13 +779,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def polar_mult(x : Polar, y : Polar) -> Polar:\n",
-    "    return ..."
+    "    r = x[0] * y[0]\n",
+    "    theta = x[1] + y[1]\n",
+    "\n",
+    "    if theta <= -math.pi:\n",
+    "        theta += 2 * math.pi\n",
+    "    elif theta > math.pi:\n",
+    "        theta -= 2 * math.pi\n",
+    "        \n",
+    "    return (r, theta)"
    ]
   },
   {
@@ -695,13 +835,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_exp_arbitrary(x : Complex, y : Complex) -> Complex:\n",
-    "    return ..."
+    "    (a, b) = x\n",
+    "    (c, d) = y\n",
+    "\n",
+    "    # Convert x to polar form\n",
+    "    r = math.sqrt(a ** 2 + b ** 2)\n",
+    "    theta = math.atan2(b, a)\n",
+    "    \n",
+    "    if (r == 0):\n",
+    "        return (0, 0)\n",
+    "\n",
+    "    lnr = math.log(r)\n",
+    "    \n",
+    "    exponent = math.exp(lnr * c - d * theta)\n",
+    "    \n",
+    "    real = exponent * (math.cos(lnr * d + theta * c ))\n",
+    "    imaginary = exponent * (math.sin(lnr * d + theta * c))\n",
+    "    \n",
+    "    return (real, imaginary)"
    ]
   },
   {
@@ -737,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
