Complete Kata 2 Assignment

--- a/tutorials/LinearAlgebra/LinearAlgebra.ipynb
+++ b/tutorials/LinearAlgebra/LinearAlgebra.ipynb
@@ -46,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell using Ctrl+Enter (⌘+Enter on Mac).\n",
     "from testing import exercise, create_empty_matrix\n",
@@ -171,9 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def matrix_add(a : Matrix, b : Matrix) -> Matrix:\n",
@@ -194,7 +210,7 @@
     "            y = b[i][j]\n",
     "            \n",
     "            # You can modify the elements of a matrix like this:\n",
-    "            c[i][j] = ...\n",
+    "            c[i][j] = a[i][j] + b[i][j]\n",
     "    \n",
     "    return c"
    ]
@@ -258,14 +274,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def scalar_mult(x : complex, a : Matrix) -> Matrix:\n",
     "    # Fill in the missing code and run the cell to check your work.\n",
-    "    return ..."
+    "    rows = len(a)\n",
+    "    columns = len(a[0])\n",
+    "    b = create_empty_matrix(rows, columns)\n",
+    "    \n",
+    "    for i in range(rows):\n",
+    "        for j in range(columns):\n",
+    "            b[i][j] = x * a[i][j]\n",
+    "    \n",
+    "    return b"
    ]
   },
   {
@@ -375,13 +407,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def matrix_mult(a : Matrix, b : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    a_rows = len(a)\n",
+    "    a_cols = len(a[0])\n",
+    "    b_rows = len(b)\n",
+    "    b_cols = len(b[0])\n",
+    "    \n",
+    "    c = create_empty_matrix(a_rows, b_cols)\n",
+    "\n",
+    "    for i in range(a_rows):\n",
+    "        for j in range(b_cols):\n",
+    "            for m in range(a_cols):\n",
+    "                c[i][j] += a[i][m] * b[m][j] \n",
+    "\n",
+    "    return c\n",
+    "        \n",
+    "            "
    ]
   },
   {
@@ -435,13 +489,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def matrix_inverse(a : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    e = a[0][0]\n",
+    "    f = a[0][1]\n",
+    "    g = a[1][0]\n",
+    "    h = a[1][1]\n",
+    "    determinant = a[0][0] * a[1][1] - a[0][1] * a[1][0]\n",
+    "    inverse = [[h / determinant, -f / determinant], [-g / determinant, e / determinant]]\n",
+    "\n",
+    "    return inverse"
    ]
   },
   {
@@ -524,13 +593,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def transpose(a : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    rows = len(a)\n",
+    "    cols = len(a[0])\n",
+    "    \n",
+    "    c = create_empty_matrix(cols, rows)\n",
+    "    \n",
+    "    for j in range(cols):\n",
+    "        for i in range(rows):\n",
+    "            c[j][i] = a[i][j]\n",
+    "    \n",
+    "    return c"
    ]
   },
   {
@@ -590,13 +676,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def conjugate(a : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    rows = len(a)\n",
+    "    cols = len(a[0])\n",
+    "    \n",
+    "    c = create_empty_matrix(rows, cols)\n",
+    "    \n",
+    "    for i in range(rows):\n",
+    "        for j in range(cols):\n",
+    "            c[i][j] = complex(a[i][j].real, -a[i][j].imag)\n",
+    "    \n",
+    "    return c"
    ]
   },
   {
@@ -641,13 +744,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def adjoint(a : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    c = conjugate(a)\n",
+    "    c = transpose(c)\n",
+    "    return c"
    ]
   },
   {
@@ -694,9 +807,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected result:\n",
+      "       |  0.000+0.000i  0.000+0.000i |                                             \n",
+      "Matrix |  0.000+0.000i  0.000+0.000i | is not unitary, but misidentified as unitary\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pytest import approx\n",
     "\n",
@@ -1166,7 +1290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
