--- a/tutorials/SingleQubitGates/SingleQubitGates.ipynb
+++ b/tutorials/SingleQubitGates/SingleQubitGates.ipynb
@@ -439,7 +439,7 @@
     },
     {
      "data": {
-      "application/json": "{\"div_id\":\"dump-machine-div-63ce2e74-053d-4135-91ea-4f940b66fe9e\",\"qubit_ids\":[0],\"n_qubits\":1,\"amplitudes\":[{\"Real\":0.8775825618903728,\"Imaginary\":0.0,\"Magnitude\":0.8775825618903728,\"Phase\":0.0},{\"Real\":0.479425538604203,\"Imaginary\":0.0,\"Magnitude\":0.479425538604203,\"Phase\":0.0}]}",
+      "application/json": "{\"div_id\":\"dump-machine-div-f53533c3-ce16-4b5e-8a26-b70bd90ff341\",\"qubit_ids\":[0],\"n_qubits\":1,\"amplitudes\":[{\"Real\":0.8775825618903728,\"Imaginary\":0.0,\"Magnitude\":0.8775825618903728,\"Phase\":0.0},{\"Real\":0.479425538604203,\"Imaginary\":0.0,\"Magnitude\":0.479425538604203,\"Phase\":0.0}]}",
       "text/html": [
        "\r\n",
        "                    <table style=\"table-layout: fixed; width: 100%\">\r\n",
@@ -468,12 +468,12 @@
        "                                        style=\"width: 100%;\"\r\n",
        "                                    > \r\n",
        "                                    <td>\r\n",
-       "                                    <p id=\"round-327e1662-eef4-4093-af42-a7fc4996844c\"> \r\n",
+       "                                    <p id=\"round-a1389a84-87d1-4e96-8c87-ea4562ec6fc7\"> \r\n",
        "                                    <script>\r\n",
        "                                    var num = 77.01511529340699;\r\n",
        "                                    num = num.toFixed(4);\r\n",
        "                                    var num_string = num + \"%\";\r\n",
-       "                                     document.getElementById(\"round-327e1662-eef4-4093-af42-a7fc4996844c\").innerHTML = num_string;\r\n",
+       "                                     document.getElementById(\"round-a1389a84-87d1-4e96-8c87-ea4562ec6fc7\").innerHTML = num_string;\r\n",
        "                                    </script> </p>\r\n",
        "                                    </td>\r\n",
        "                                </td>\r\n",
@@ -498,12 +498,12 @@
        "                                        style=\"width: 100%;\"\r\n",
        "                                    > \r\n",
        "                                    <td>\r\n",
-       "                                    <p id=\"round-7afe55bd-1584-4986-8819-9ea2c8a26c18\"> \r\n",
+       "                                    <p id=\"round-b8f0b1b1-d05d-4509-bca4-69f5e5fce84c\"> \r\n",
        "                                    <script>\r\n",
        "                                    var num = 22.984884706593014;\r\n",
        "                                    num = num.toFixed(4);\r\n",
        "                                    var num_string = num + \"%\";\r\n",
-       "                                     document.getElementById(\"round-7afe55bd-1584-4986-8819-9ea2c8a26c18\").innerHTML = num_string;\r\n",
+       "                                     document.getElementById(\"round-b8f0b1b1-d05d-4509-bca4-69f5e5fce84c\").innerHTML = num_string;\r\n",
        "                                    </script> </p>\r\n",
        "                                    </td>\r\n",
        "                                </td>\r\n",
@@ -536,7 +536,7 @@
     },
     {
      "data": {
-      "application/json": "{\"div_id\":\"dump-machine-div-83e91b21-c9dd-4d8f-92c5-4b715c5845b3\",\"qubit_ids\":[0],\"n_qubits\":1,\"amplitudes\":[{\"Real\":0.479425538604203,\"Imaginary\":0.0,\"Magnitude\":0.479425538604203,\"Phase\":0.0},{\"Real\":0.8775825618903728,\"Imaginary\":0.0,\"Magnitude\":0.8775825618903728,\"Phase\":0.0}]}",
+      "application/json": "{\"div_id\":\"dump-machine-div-e8b58801-fe65-413d-8c74-6ea2bfa6bbfe\",\"qubit_ids\":[0],\"n_qubits\":1,\"amplitudes\":[{\"Real\":0.479425538604203,\"Imaginary\":0.0,\"Magnitude\":0.479425538604203,\"Phase\":0.0},{\"Real\":0.8775825618903728,\"Imaginary\":0.0,\"Magnitude\":0.8775825618903728,\"Phase\":0.0}]}",
       "text/html": [
        "\r\n",
        "                    <table style=\"table-layout: fixed; width: 100%\">\r\n",
@@ -565,12 +565,12 @@
        "                                        style=\"width: 100%;\"\r\n",
        "                                    > \r\n",
        "                                    <td>\r\n",
-       "                                    <p id=\"round-8eff7a3b-fbb8-4210-8544-8c8ef0cd643d\"> \r\n",
+       "                                    <p id=\"round-a89087d4-c617-40e0-93d9-37667757cfba\"> \r\n",
        "                                    <script>\r\n",
        "                                    var num = 22.984884706593014;\r\n",
        "                                    num = num.toFixed(4);\r\n",
        "                                    var num_string = num + \"%\";\r\n",
-       "                                     document.getElementById(\"round-8eff7a3b-fbb8-4210-8544-8c8ef0cd643d\").innerHTML = num_string;\r\n",
+       "                                     document.getElementById(\"round-a89087d4-c617-40e0-93d9-37667757cfba\").innerHTML = num_string;\r\n",
        "                                    </script> </p>\r\n",
        "                                    </td>\r\n",
        "                                </td>\r\n",
@@ -595,12 +595,12 @@
        "                                        style=\"width: 100%;\"\r\n",
        "                                    > \r\n",
        "                                    <td>\r\n",
-       "                                    <p id=\"round-3dc1858e-f265-4918-b347-be19c3390e15\"> \r\n",
+       "                                    <p id=\"round-cc3e5804-e682-41b1-9930-13ce856df1f7\"> \r\n",
        "                                    <script>\r\n",
        "                                    var num = 77.01511529340699;\r\n",
        "                                    num = num.toFixed(4);\r\n",
        "                                    var num_string = num + \"%\";\r\n",
-       "                                     document.getElementById(\"round-3dc1858e-f265-4918-b347-be19c3390e15\").innerHTML = num_string;\r\n",
+       "                                     document.getElementById(\"round-cc3e5804-e682-41b1-9930-13ce856df1f7\").innerHTML = num_string;\r\n",
        "                                    </script> </p>\r\n",
        "                                    </td>\r\n",
        "                                </td>\r\n",
@@ -633,7 +633,7 @@
     },
     {
      "data": {
-      "application/json": "{\"div_id\":\"dump-machine-div-aaf40794-6b9c-4ca2-b146-308bce798673\",\"qubit_ids\":[0],\"n_qubits\":1,\"amplitudes\":[{\"Real\":0.479425538604203,\"Imaginary\":0.0,\"Magnitude\":0.479425538604203,\"Phase\":0.0},{\"Real\":-0.8775825618903728,\"Imaginary\":0.0,\"Magnitude\":0.8775825618903728,\"Phase\":3.141592653589793}]}",
+      "application/json": "{\"div_id\":\"dump-machine-div-d8ad70d6-46f2-49d9-a027-09b44772b187\",\"qubit_ids\":[0],\"n_qubits\":1,\"amplitudes\":[{\"Real\":0.479425538604203,\"Imaginary\":0.0,\"Magnitude\":0.479425538604203,\"Phase\":0.0},{\"Real\":-0.8775825618903728,\"Imaginary\":0.0,\"Magnitude\":0.8775825618903728,\"Phase\":3.141592653589793}]}",
       "text/html": [
        "\r\n",
        "                    <table style=\"table-layout: fixed; width: 100%\">\r\n",
@@ -662,12 +662,12 @@
        "                                        style=\"width: 100%;\"\r\n",
        "                                    > \r\n",
        "                                    <td>\r\n",
-       "                                    <p id=\"round-b78e555c-7dae-4928-bd0f-53e42089a115\"> \r\n",
+       "                                    <p id=\"round-21de2509-08fd-46e6-81a7-f1a8b7043f67\"> \r\n",
        "                                    <script>\r\n",
        "                                    var num = 22.984884706593014;\r\n",
        "                                    num = num.toFixed(4);\r\n",
        "                                    var num_string = num + \"%\";\r\n",
-       "                                     document.getElementById(\"round-b78e555c-7dae-4928-bd0f-53e42089a115\").innerHTML = num_string;\r\n",
+       "                                     document.getElementById(\"round-21de2509-08fd-46e6-81a7-f1a8b7043f67\").innerHTML = num_string;\r\n",
        "                                    </script> </p>\r\n",
        "                                    </td>\r\n",
        "                                </td>\r\n",
@@ -692,12 +692,12 @@
        "                                        style=\"width: 100%;\"\r\n",
        "                                    > \r\n",
        "                                    <td>\r\n",
-       "                                    <p id=\"round-296edb7f-a848-45be-bb8a-eb3273e3508e\"> \r\n",
+       "                                    <p id=\"round-f258f2df-de29-4542-8750-103be184a15f\"> \r\n",
        "                                    <script>\r\n",
        "                                    var num = 77.01511529340699;\r\n",
        "                                    num = num.toFixed(4);\r\n",
        "                                    var num_string = num + \"%\";\r\n",
-       "                                     document.getElementById(\"round-296edb7f-a848-45be-bb8a-eb3273e3508e\").innerHTML = num_string;\r\n",
+       "                                     document.getElementById(\"round-f258f2df-de29-4542-8750-103be184a15f\").innerHTML = num_string;\r\n",
        "                                    </script> </p>\r\n",
        "                                    </td>\r\n",
        "                                </td>\r\n",
@@ -730,7 +730,7 @@
     },
     {
      "data": {
-      "application/json": "{\"div_id\":\"dump-machine-div-bbba105a-e7ab-420b-ae9c-d4b17316aef7\",\"qubit_ids\":[0],\"n_qubits\":1,\"amplitudes\":[{\"Real\":0.0,\"Imaginary\":0.8775825618903728,\"Magnitude\":0.8775825618903728,\"Phase\":1.5707963267948966},{\"Real\":0.0,\"Imaginary\":0.479425538604203,\"Magnitude\":0.479425538604203,\"Phase\":1.5707963267948966}]}",
+      "application/json": "{\"div_id\":\"dump-machine-div-a41f2b4e-8724-43a7-a450-a5aaccd0453f\",\"qubit_ids\":[0],\"n_qubits\":1,\"amplitudes\":[{\"Real\":0.0,\"Imaginary\":0.8775825618903728,\"Magnitude\":0.8775825618903728,\"Phase\":1.5707963267948966},{\"Real\":0.0,\"Imaginary\":0.479425538604203,\"Magnitude\":0.479425538604203,\"Phase\":1.5707963267948966}]}",
       "text/html": [
        "\r\n",
        "                    <table style=\"table-layout: fixed; width: 100%\">\r\n",
@@ -759,12 +759,12 @@
        "                                        style=\"width: 100%;\"\r\n",
        "                                    > \r\n",
        "                                    <td>\r\n",
-       "                                    <p id=\"round-99b660a7-848b-4919-aae2-0d0eb97b5335\"> \r\n",
+       "                                    <p id=\"round-6e7813d8-926e-452f-b7b7-93b560e4493d\"> \r\n",
        "                                    <script>\r\n",
        "                                    var num = 77.01511529340699;\r\n",
        "                                    num = num.toFixed(4);\r\n",
        "                                    var num_string = num + \"%\";\r\n",
-       "                                     document.getElementById(\"round-99b660a7-848b-4919-aae2-0d0eb97b5335\").innerHTML = num_string;\r\n",
+       "                                     document.getElementById(\"round-6e7813d8-926e-452f-b7b7-93b560e4493d\").innerHTML = num_string;\r\n",
        "                                    </script> </p>\r\n",
        "                                    </td>\r\n",
        "                                </td>\r\n",
@@ -789,12 +789,12 @@
        "                                        style=\"width: 100%;\"\r\n",
        "                                    > \r\n",
        "                                    <td>\r\n",
-       "                                    <p id=\"round-30a7f7ed-ba3c-4e49-8115-b48123bb033e\"> \r\n",
+       "                                    <p id=\"round-e019a1e6-9cd0-42d4-b9da-4975860eceb6\"> \r\n",
        "                                    <script>\r\n",
        "                                    var num = 22.984884706593014;\r\n",
        "                                    num = num.toFixed(4);\r\n",
        "                                    var num_string = num + \"%\";\r\n",
-       "                                     document.getElementById(\"round-30a7f7ed-ba3c-4e49-8115-b48123bb033e\").innerHTML = num_string;\r\n",
+       "                                     document.getElementById(\"round-e019a1e6-9cd0-42d4-b9da-4975860eceb6\").innerHTML = num_string;\r\n",
        "                                    </script> </p>\r\n",
        "                                    </td>\r\n",
        "                                </td>\r\n",
@@ -820,9 +820,9 @@
     },
     {
      "data": {
-      "application/json": "{\"Html\":\"<div id='execution-path-container-75666a87-d293-4519-8a54-aa5b34c32be1' />\"}",
+      "application/json": "{\"Html\":\"<div id='execution-path-container-c238f91f-e8aa-4727-8ad2-902b256a174c' />\"}",
       "text/html": [
-       "<div id='execution-path-container-75666a87-d293-4519-8a54-aa5b34c32be1' />"
+       "<div id='execution-path-container-c238f91f-e8aa-4727-8ad2-902b256a174c' />"
       ],
       "text/plain": [
        "Microsoft.Quantum.IQSharp.Jupyter.DisplayableHtmlElement"
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "Success!"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
        "Success!"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
        "Success!"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,16 +1071,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Could not load type 'Microsoft.Quantum.Intrinsic.Allocate' from assembly 'Microsoft.Quantum.QSharp.Core, Version=0.15.0.0, Culture=neutral, PublicKeyToken=40866b40fd95c7f5'.\n",
-      "Try again!\n"
-     ]
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1171,25 +1174,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Qubit in invalid state. Expecting: Zero\n",
-      "\tExpected:\t0\n",
-      "\tActual:\t0.4267766952966372\n",
-      "Try again!\n"
-     ]
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%kata T5_ThreeQuatersPiPhase\n",
     "\n",
     "operation ThreeQuatersPiPhase (q : Qubit) : Unit is Adj+Ctl {\n",
-    "\n",
+    "    T(q);\n",
+    "    T(q);\n",
+    "    T(q);\n",
     "}"
    ]
   },
@@ -1299,16 +1305,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Could not load type 'Microsoft.Quantum.Math.Cos' from assembly 'Microsoft.Quantum.QSharp.Core, Version=0.15.0.0, Culture=neutral, PublicKeyToken=40866b40fd95c7f5'.\n",
-      "Try again!\n"
-     ]
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1317,7 +1326,7 @@
     "open Microsoft.Quantum.Math;\n",
     "\n",
     "operation PrepareRotatedState (alpha : Double, beta : Double, q : Qubit) : Unit is Adj+Ctl {\n",
-    "    // ...\n",
+    "    Rx(2.0 * ArcTan2(beta, alpha), q);\n",
     "}"
    ]
   },
@@ -1348,16 +1357,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T7_PrepareArbitraryState\n",
     "\n",
     "open Microsoft.Quantum.Math;\n",
     "\n",
     "operation PrepareArbitraryState (alpha : Double, beta : Double, theta : Double, q : Qubit) : Unit is Adj+Ctl {\n",
-    "    // ...\n",
+    "    Ry(2.0 * ArcTan2(beta, alpha), q);\n",
+    "    R1(theta, q);\n",
     "}"
    ]
   },
