--- a/tutorials/LinearAlgebra/LinearAlgebra.ipynb
+++ b/tutorials/LinearAlgebra/LinearAlgebra.ipynb
@@ -807,17 +807,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unexpected result:\n",
-      "       |  0.000+0.000i  0.000+0.000i |                                             \n",
-      "Matrix |  0.000+0.000i  0.000+0.000i | is not unitary, but misidentified as unitary\n",
-      "\n"
+      "Success!\n"
      ]
     }
    ],
@@ -826,7 +823,16 @@
     "\n",
     "@exercise\n",
     "def is_matrix_unitary(a : Matrix) -> bool:\n",
-    "    return ..."
+    "    mult = matrix_mult(a, adjoint(a))\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(len(a)):\n",
+    "            if i == j:\n",
+    "                if a[i][j] != approx(1):\n",
+    "                    return False\n",
+    "            else:\n",
+    "                if a[i][j] != approx(0):\n",
+    "                    return False\n",
+    "    return True"
    ]
   },
   {
@@ -935,13 +941,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def inner_prod(v : Matrix, w : Matrix) -> complex:\n",
-    "    return ..."
+    "    v_t = conjugate(transpose(v))\n",
+    "    total = 0\n",
+    "    for i in range(len(v)):\n",
+    "        total += v_t[0][i] * w[i][0]\n",
+    "    return total"
    ]
   },
   {
@@ -971,13 +989,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def normalize(v : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    c = create_empty_matrix(len(v), 1)\n",
+    "    \n",
+    "    norm = cmath.sqrt(inner_prod(v, v))\n",
+    "    \n",
+    "    for i in range(len(v)):\n",
+    "        c[i][0] = v[i][0] / norm\n",
+    "    \n",
+    "    return c"
    ]
   },
   {
@@ -1031,13 +1064,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def outer_prod(v : Matrix, w : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    w_t = conjugate(transpose(w))\n",
+    "    return matrix_mult(v, w_t)"
    ]
   },
   {
