Completed Kata 5 Assignment

--- a/tutorials/LinearAlgebra/LinearAlgebra.ipynb
+++ b/tutorials/LinearAlgebra/LinearAlgebra.ipynb
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1178,13 +1178,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def tensor_product(a : Matrix, b : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    c = create_empty_matrix(len(a)*len(b), len(a[0])*len(b[0]))\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(len(a[0])):\n",
+    "            start_x = i * len(b)\n",
+    "            start_y = j * len(b[0])\n",
+    "            for m in range(len(b)):\n",
+    "                for n in range(len(b[0])):\n",
+    "                    c[start_x + m][start_y + n] = a[i][j] * b[m][n]\n",
+    "    return c"
    ]
   },
   {
