--- a/tutorials/MultiQubitGates/MultiQubitGates.ipynb
+++ b/tutorials/MultiQubitGates/MultiQubitGates.ipynb
@@ -104,14 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T1_CompoundGate\n",
     "\n",
     "operation CompoundGate (qs : Qubit[]) : Unit is Adj {\n",
-    "    // ...\n",
+    "    S(qs[0]);\n",
+    "    I(qs[1]);\n",
+    "    Y(qs[2]);\n",
     "}"
    ]
   },
@@ -189,14 +203,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T2_BellState\n",
     "\n",
     "operation BellState (qs : Qubit[]) : Unit is Adj {\n",
-    "    // ...\n",
+    "    H(qs[0]);\n",
+    "    CNOT(qs[0], qs[1]);\n",
     "}"
    ]
   },
@@ -666,14 +693,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T4_ControlledRotation\n",
     "\n",
     "operation ControlledRotation (qs : Qubit[], theta : Double) : Unit is Adj {\n",
-    "    // ...\n",
+    "    Controlled Rx([qs[0]], (theta, qs[1]));\n",
     "}"
    ]
   },
@@ -841,7 +880,7 @@
    "file_extension": ".qs",
    "mimetype": "text/x-qsharp",
    "name": "qsharp",
-   "version": "0.12"
+   "version": "0.14"
   }
  },
  "nbformat": 4,
