--- a/tutorials/MultiQubitGates/MultiQubitGates.ipynb
+++ b/tutorials/MultiQubitGates/MultiQubitGates.ipynb
@@ -385,14 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T3_QubitSwap\n",
     "\n",
     "operation QubitSwap (qs : Qubit[], index1 : Int, index2 : Int) : Unit is Adj {\n",
-    "    // ...\n",
+    "    SWAP(qs[index1], qs[index2]);\n",
     "}"
    ]
   },
@@ -841,14 +853,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T5_MultiControls\n",
     "\n",
     "operation MultiControls (controls : Qubit[], target : Qubit, controlBits : Bool[]) : Unit is Adj {\n",
-    "    // ...\n",
+    "    ControlledOnBitString(controlBits, X)(controls, target);\n",
     "}"
    ]
   },
