--- a/Teleportation/Teleportation.ipynb
+++ b/Teleportation/Teleportation.ipynb
@@ -41,14 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T11_Entangle \n",
     "\n",
     "operation Entangle (qAlice : Qubit, qBob : Qubit) : Unit {\n",
-    "    // ...\n",
+    "    H(qAlice);\n",
+    "    CNOT(qAlice, qBob);\n",
     "}"
    ]
   },
@@ -71,15 +84,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T12_SendMessage \n",
     "\n",
+    "open Microsoft.Quantum.Convert;\n",
+    "\n",
     "operation SendMessage (qAlice : Qubit, qMessage : Qubit) : (Bool, Bool) {\n",
-    "    // ...\n",
-    "    return (false, false);\n",
+    "    CNOT(qMessage, qAlice);\n",
+    "    H(qMessage);\n",
+    "    return (ResultAsBool(M(qMessage)), ResultAsBool(M(qAlice)));\n",
     "}"
    ]
   },
@@ -100,14 +128,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T13_ReconstructMessage \n",
     "\n",
+    "open Microsoft.Quantum.Math;\n",
+    "\n",
     "operation ReconstructMessage (qBob : Qubit, (b1 : Bool, b2 : Bool)) : Unit {\n",
-    "    // ...\n",
+    "    if (b2) {\n",
+    "        X(qBob);\n",
+    "    }\n",
+    "    \n",
+    "    if (b1) {\n",
+    "        R1(PI(), qBob);\n",
+    "    }\n",
     "}"
    ]
   },
@@ -129,14 +177,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T14_StandardTeleport\n",
     "\n",
     "operation StandardTeleport (qAlice : Qubit, qBob : Qubit, qMessage : Qubit) : Unit {\n",
-    "    // ...\n",
+    "    Entangle(qAlice, qBob);\n",
+    "    let bools = SendMessage(qAlice, qMessage);\n",
+    "    ReconstructMessage(qBob, bools);\n",
     "}"
    ]
   },
@@ -161,15 +223,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T15_PrepareAndSendMessage\n",
     "\n",
+    "open Microsoft.Quantum.Preparation;\n",
+    "open Microsoft.Quantum.Convert;\n",
+    "\n",
     "operation PrepareAndSendMessage (qAlice : Qubit, basis : Pauli, state : Bool) : (Bool, Bool) {\n",
-    "    // ...\n",
-    "    return (false, false);\n",
+    "    use qMessage = Qubit();\n",
+    "    if (state) {\n",
+    "        X(qMessage);\n",
+    "    }\n",
+    "    PreparePauliEigenstate(basis, qMessage);\n",
+    "    \n",
+    "    CNOT(qMessage, qAlice);\n",
+    "    H(qMessage);\n",
+    "    \n",
+    "    let messageVal = ResultAsBool(M(qMessage));\n",
+    "    let aliceVal = ResultAsBool(M(qAlice));\n",
+    "    \n",
+    "    return (messageVal, aliceVal);\n",
     "}"
    ]
   },
@@ -194,16 +282,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T16_ReconstructAndMeasureMessage\n",
     "\n",
+    "open Microsoft.Quantum.Preparation;\n",
+    "open Microsoft.Quantum.Math;\n",
+    "open Microsoft.Quantum.Convert;\n",
+    "\n",
     "operation ReconstructAndMeasureMessage (qBob : Qubit, (b1 : Bool, b2 : Bool), basis : Pauli) : Bool {\n",
-    "        \n",
-    "    // ...\n",
-    "    return false;\n",
+    "    if (b2) {\n",
+    "        X(qBob);\n",
+    "    }\n",
+    "    \n",
+    "    if (b1) {\n",
+    "        R1(PI(), qBob);\n",
+    "    }\n",
+    "    \n",
+    "    let results = Measure([basis], [qBob]);\n",
+    "    let bobVal = ResultAsBool(results);\n",
+    "    \n",
+    "    return bobVal;\n",
     "}"
    ]
   },
@@ -438,7 +551,7 @@
    "file_extension": ".qs",
    "mimetype": "text/x-qsharp",
    "name": "qsharp",
-   "version": "0.12"
+   "version": "0.14"
   }
  },
  "nbformat": 4,
