--- a/tutorials/MultiQubitGates/MultiQubitGates.ipynb
+++ b/tutorials/MultiQubitGates/MultiQubitGates.ipynb
@@ -385,14 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T3_QubitSwap\n",
     "\n",
     "operation QubitSwap (qs : Qubit[], index1 : Int, index2 : Int) : Unit is Adj {\n",
-    "    // ...\n",
+    "    SWAP(qs[index1], qs[index2]);\n",
     "}"
    ]
   },
@@ -867,6 +879,15 @@
     "\n",
     "Congratulations! You have completed the series of introductory tutorials and are ready to start solving the katas.\n",
     "You should start with the [Basic Gates](../../BasicGates/BasicGates.ipynb) and [Superposition](../../Superposition/Superposition.ipynb) katas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CCNOT"
    ]
   }
  ],
