--- a/GroversAlgorithm/GroversAlgorithm.ipynb
+++ b/GroversAlgorithm/GroversAlgorithm.ipynb
@@ -74,14 +74,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T11_Oracle_AllOnes \n",
     "\n",
     "operation Oracle_AllOnes (queryRegister : Qubit[], target : Qubit) : Unit is Adj {\n",
-    "    // ...\n",
+    "    Controlled X(queryRegister, target);\n",
     "}"
    ]
   },
@@ -151,14 +163,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T13_Oracle_ArbitraryPattern \n",
     "\n",
     "operation Oracle_ArbitraryPattern (queryRegister : Qubit[], target : Qubit, pattern : Bool[]) : Unit is Adj {\n",
-    "    // ...\n",
+    "    (ControlledOnBitString(pattern, X))(queryRegister, target);\n",
     "}"
    ]
   },
@@ -440,7 +464,7 @@
    "file_extension": ".qs",
    "mimetype": "text/x-qsharp",
    "name": "qsharp",
-   "version": "0.12"
+   "version": "0.14"
   }
  },
  "nbformat": 4,
